<resources>
    <string name="app_name">LEARN WITH GARBANCETE</string>
    <string name="maths_name">MATHS</string>
    <string name="maths_name2">MATHS</string>
    <string name="health_name">HEALTH</string>
    <string name="geometry_name">GEOMETRY</string>
    <string name="language_name">SPANISH</string>
    <string name="science_name">SCIENCE</string>
    <string name="score_name">Score</string>
    <string name="level_name">Level</string>
    <string name="puntuaje_bajo">OOPS... YOU GOT</string>
    <string name="points">POINTS!</string>
    <string name="puntuaje_medio">YOU ALMOST GOT IT! YOU ACHIEVED</string>
    <string name="puntuaje_alto">WOW! CONGRATULATIONS! YOU ARE A REAL MATHEMATICIAN! YOU GOT</string>
    <string name="correct">CORRECT!</string>
    <string name="incorrect">INCORRECT!</string>
    <string name="tryagain">Try again!</string>
    <string name="successLanguage">WELL DONE! YOU PASSED YOUR SPANISH CLASS</string>
    <string name="say">SAY</string>
    <string name="saysmth">Say something!</string>
    <string name="idioma"> es-ES </string>
    <string name="frase1">¡Hola!</string>
    <string name="frase2">¿Cómo te llamas?</string>
    <string name="frase3">Mi nombre es Garbancete</string>
    <string name="frase4">Me gusta jugar al fútbol</string>
    <string name="frase5">Estoy muy feliz</string>
    <string name="frase6">Soy un conejo</string>
    <string name="frase7">Espera un momento</string>
    <string name="frase8">Me encanta aprender español</string>
    <string name="frase9">Mi color favorito es el naranja</string>
    <string name="frase10">¡Adiós!</string>
    <string name="back">BACK</string>
    <string name="blindassitantmode">VISUAL ASSISTANT</string>
    <string name="changelanguage">CHANGE LANGUAGE</string>
    <string name="colourblindmode">COLOUR BLIND MODE</string>
    <string name="defaultvalues">RESTORE DEFAULT VALUES</string>
    <string name="skipt">SKIP</string>
    <string name="saludo">Hi, friend! It\'s Garbancete!</string>
    <string name="dialogo1">I think an explanation of the settings will help you, won\'t it?</string>
    <string name="dialogo2">First, switch this option on in case you need visual assistance</string>
    <string name="dialogo3">Then, if you want to change the language, click here!</string>
    <string name="dialogo4">Next, click here if you suffer color blindness</string>
    <string name="dialogo5">Finally, click here to reset your settings</string>
    <string name="despedida">That\'s all! Let me know if you need me to repeat everything!</string>
    <string name="siguiente">NEXT</string>
    <string name="ayuda">If you want to rewatch the tutorial, click on me!</string>
    <string name="info">Information</string>
    <string name="activaAsist">You have activated the visual assistance</string>
    <string name="desactivaAsist">You have deactivated the visual assistance</string>
    <string name="ChangeEnglish">You have changed language to English</string>
    <string name="ChangeSpanish">You have changed language to Spanish</string>
    <string name="activaColorProtanomalia">You have activated the Protanomalia colour blind mode</string>
    <string name="activaColorDeuteronomalia">You have activated the Deuteronomalia colour blind mode</string>
    <string name="activaColorTritanomalia">You have activated the Tritanomalia colour blind mode</string>

    <string name="desactivaColor">You have deactivated the colour blind mode</string>
    <string name="restoreValues">You have restored default values</string>
    <string name="options">Options</string>
    <string name="timeout">OOPS! TIME IS OUT!</string>
    <string name="empiezaGeo">SELECT ONE FIGURE AND DROP IT TO ITS SHADOW</string>
    <string name="confGeo">VERY GOOD!</string>
    <string name="playwithme">TELL ME WHAT YOU WANT TO DO!</string>
    <string name="mathsVoz">OK! OPENING MATHS GAME!</string>
    <string name="healthVoz">OK! OPENING HEALTH GAME!</string>
    <string name="geometryoz">OK! OPENING GEOMETRY GAME!</string>
    <string name="languageVoz">OK! OPENING SPANISH GAME!</string>
    <string name="confVoz">OK! OPENING CONFIGURATION!</string>
    <string name="idiomaChange">OK! SETTING SPANISH!</string>
    <string name="visualChange">OK! TURNING VISUAL ASSISTANCE ON!</string>
    <string name="conf_name">configuration</string>
    <string name="congrats">CONGRATULATIONS! YOU DID IT!</string>

    <string name="hamburguesa">Hamburguer</string>
    <string name="zanahoria">Carrot</string>
    <string name="lechuga">Lettuce</string>
    <string name="manzana">Apple</string>
    <string name="pizza">Pizza</string>
    <string name="buentrabajosiguiente">Good job! Click on me to go to the next one</string>
    <string name="felicidades">Congratulations!</string>
    <string name="vuelveaintentarlo">You\'re wrong!!, click on me and try again</string>
    <string name="holahealthy">Hi! Rotate the phone to one way or another if the food is healthy or not</string>
    <string name="score">Score:</string>
    <string name="titulohealthy">HEALTHY OR UNHEALTHY?</string>

</resources>